[package]
name = "sm-feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
lapin = { version = "2.3.1", features = ["serde_json"] }
regex = "1.10.0"
reqwest = "0.11.22"
rss = "2.0.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
